fix: after revert fixes

--- a/Frontend/Components/Layout/MainLayout.razor
+++ b/Frontend/Components/Layout/MainLayout.razor
@@ -6,7 +6,10 @@
 @inject LoginEventService LoginEvents
 
 <div class="page">
-    <div class="sidebar"><NavMenu/></div>
+  @if (_isLoggedIn)
+  {
+  <div class="sidebar"><NavMenu/></div>
+  }
   <main>
     @if (_showTopBar)
     {
